integrate contact api and add some spam filters fix https://github.com/Coflnet/fleet/issues/23
